--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Boluwaji Samuel Portfolio<br />
 						</h1>
-						<p>Beginner Cloud Architect familiar in provisioning cloud solutions in AWS,GCP,IBM and monitoring using Datadog.<a href="www.linkedin.com/in/boluwaji-ayobami-7a556926a">@BoluwajiSamuel</a> 
+						<p>Beginner Cloud Architect familiar in provisioning cloud solutions in AWS,GCP,IBM and monitoring using Datadog.<a href="www.linkedin.com/in/boluwaji-ayobami-7a556926a"></a> 
 					    </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
